# Medical-image-synthesis-BraTS-2021-dataset

./: .gitignore  DLMI HW1.docx  README.md  pyproject.toml  requirements.txt  run_pipeline.sh
configs/: cyclegan_brats.yaml
docs/: HW1_Report.md  report_template.md
scripts/: download_dataset.py  evaluate_cyclegan.py  evaluate_qualitative.py  preprocess_brats.py  train_cyclegan.py
src/dlmi_hw1/: __init__.py
src/dlmi_hw1/eval/: evaluate_cyclegan.py  metrics.py
src/dlmi_hw1/models/: cyclegan.py  losses.py
src/dlmi_hw1/train/: train_cyclegan.py
